# timestampr

./: .gitignore  AGENTS.md  LICENSE  README.md  README_and_AGENTS.md  pyproject.toml
.github/workflows/: check-version-on-tag.yml  prepare-release.yml
tests/: test_cli.py  test_dash.py
timestampr/: cli.py
