[project]
name            = "timestampr"
version         = "0.1.1"
description     = "Bare‑bones note‑taker with timestamp"
authors         = [{ name = "Donnie McFarlane" }]
license         = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
stamp = "timestampr.cli:main"

[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
